@@ -3,13 +3,13 @@
     "donate_url": "https://paypal.me/lucchetto",
     "website_url": "https://revengeos.com/",
     "news_url": "https://t.me/RevengeOSNews",
-    "datetime": 1625055844.6513853,
-    "filename": "RevengeOS-4.0-R-OFFICIAL-RMX2001-20210629-2144.zip",
+    "datetime": 1626451827.8874898,
+    "filename": "RevengeOS-4.1-R-OFFICIAL-RMX2001-20210716-0442.zip",
     "id": "",
-    "size": "668374676",
-    "url": "https://sourceforge.net/projects/revengeos/files/RMX2001/RevengeOS-4.0-R-OFFICIAL-RMX2001-20210629-2144.zip",
+    "size": "709079526",
+    "url": "https://sourceforge.net/projects/revengeos/files/RMX2001/RevengeOS-4.1-R-OFFICIAL-RMX2001-20210716-0442.zip",
     "download_new": "https://download.revengeos.com/download/RMX2001",
     "clean_flash": "yes",
-    "version": "4.0",
-    "filehash": "4e11f3e39fdfe4cf495f1c205a8e1fd8"
+    "version": "4.1",
+    "filehash": "d4d2b75f24ad5da296c20f03e3935a18"
 }
