@@ -1,1 +1,9 @@
-Initial Official Build.
+July Security Patch
+Source Upstream
+Added Performance Profile
+Fixed CTS fail (Now SafetyNet passes out of the box)
+Fixed ScreenRecorder
+Fixed Battery Health
+Updated Gcam-Go
+Updated Device Build FP to redfin July
+Improved App-launch time and other improvements.
